# origincar

./: README.md  README_CN.md
docs/: PROJECT_FRAMEWORK.md  origincar_plan.md
src/connect_to_pc/: README.md  package.xml  setup.cfg  setup.py
src/connect_to_pc/config/: car_pc_bridge.yaml
src/connect_to_pc/connect_to_pc/: __init__.py  car_pc_bridge_node.py
src/connect_to_pc/launch/: car_pc_bridge.launch.py
src/connect_to_pc/resource/: connect_to_pc
src/lslidar_driver/params/lidar_uart_ros2/: lsn10.yaml
src/lslidar_driver/src/: lslidar_driver.cc
src/origincar_base/: CMakeLists.txt  package.xml
src/origincar_base/config/: ekf.yaml  slam_mapping.yaml  slam_mapping_no_ekf.yaml
src/origincar_base/include/origincar_base/: static_tf_config.hpp
src/origincar_base/launch/: base_no_ekf.launch.py  base_serial.launch.py  ros2_nav2_launch.py  rviz_mapping_light.launch.py  slam_mapping.launch.py  slam_mapping_no_ekf.launch.py  slim_bringup.launch.py  start_all.launch.py
src/origincar_base/map/: map.pgm  map.yaml  map_uncropped_462x439.pgm  map_uncropped_462x439.yaml
src/origincar_base/param/: param_mini_akm.yaml
src/origincar_base/rviz/: rviz_mapping_light.rviz
src/origincar_base/scripts/: measure_scan_delay.py  measure_tf_delay.py  setup_fastdds_discovery_client.sh  start_fastdds_discovery_server.sh
src/origincar_base/src/: cmd_vel_to_ackermann_drive.cpp  odom_tf_node.cpp  origincar_base.cpp  static_tf_node.cpp
src/origincar_base/test/: test_static_tf_config.cpp
src/origincar_bringup/: CMakeLists.txt  package.xml
src/origincar_bringup/config/: competition.yaml
src/origincar_bringup/launch/: base.launch.py  camera.launch.py  camera_raw.launch.py  competition.launch.py  mission.launch.py  perception.launch.py  task.launch.py  vehicle_stack.launch.py
src/origincar_bringup/scripts/: start_competition_3term.sh
src/origincar_broadcast/: README.md  package.xml  setup.cfg  setup.py
src/origincar_broadcast/config/: broadcast.yaml
src/origincar_broadcast/launch/: broadcast.launch.py
src/origincar_broadcast/origincar_broadcast/: __init__.py  broadcast_manager_node.py  speech_client.py
src/origincar_msg/: CMakeLists.txt
src/origincar_task/: CMakeLists.txt  package.xml
src/origincar_task/config/: field_semantics.yaml  waypoints.yaml  waypoints_field_origin_5x5.yaml  waypoints_flowpath_custom_rpp.yaml  waypoints_race_modify_optimized.yaml
src/origincar_task/include/origincar_task/: mission_policy.hpp  task_master.hpp
src/origincar_task/scripts/: ekf_verify.sh  generate_map_semantics.py  imu_calibrate.py  odom_calibrate.py
src/origincar_task/src/: task_master.cpp
src/origincar_task/test/: test_competition_config.py  test_generate_map_semantics.py  test_mission_policy.cpp
src/qr_bpu_detector/: CMakeLists.txt  README.md  package.xml
src/qr_bpu_detector/config/: qr_runtime.yaml
src/qr_bpu_detector/launch/: qr_bpu_detector.launch.py  qr_bpu_detector_debug.launch.py  qr_bpu_detector_pipeline.launch.py  qr_bpu_minimal.launch.py  qr_roi_decoder.launch.py
src/qr_bpu_detector/src/: qr_bpu_detector_node.cpp  qr_roi_decoder_node.cpp
src/racing_obstacle_detection_yolo/config/: obstacles.list  yolov5sconfig.json
src/racing_obstacle_detection_yolo/launch/: racing_obstacle_detection_yolo.launch.py
src/racing_obstacle_detection_yolo/src/: parser.cpp  sample.cpp
tools/: debug_yaml.py  default_design_yaml.js  default_yaml.js  design_czone.py  editor_data.js  embed_data.py  gen_editor.py  gen_final.py  generate_flipped.py  map_data.js  map_data.json  map_waypoint_designer.html  race_keepout_flipped.pgm  race_modify_flipped.pgm  regenerate_yaml.py  ring_ccw_new_generated.yaml  smooth_ring_ccw.py  waypoint_editor.html  write_flipped_yaml.py  yaml_base64.txt
