<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>origincar_bringup</name>
  <version>0.0.0</version>
  <description>Competition launch orchestration for OriginCar.</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>origincar_base</exec_depend>
  <exec_depend>origincar_task</exec_depend>
  <exec_depend>origincar_broadcast</exec_depend>
  <exec_depend>connect_to_pc</exec_depend>
  <exec_depend>qr_bpu_detector</exec_depend>
  <exec_depend>racing_obstacle_detection_yolo</exec_depend>
  <exec_depend>lslidar_driver</exec_depend>
  <exec_depend>deptrum-ros-driver-aurora930</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
